Overflow bug fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,9 @@ html {
 }
 body {
   margin: 0;
+}
+.wrapper {
+  position: relative;
   overflow-x: hidden;
 }
 a {
